// Copyright 2024 - MinIO, Inc. All rights reserved.
// Use of this source code is governed by the AGPLv3
// license that can be found in the LICENSE file.

syntax = "proto3";

package minio.kms;

option go_package = "/protobuf";

message Rule {}

message RuleSet {
  map<string,Rule> Rules = 1 [ json_name = "rules" ];
}
